--- a/assets/styles/styles.tex
+++ b/assets/styles/styles.tex
@@ -8,7 +8,12 @@
 \usepackage{setspace}
 \usepackage{enumitem}
 \usepackage[most]{tcolorbox}
-
+\usepackage{graphicx}
+\usepackage{tikz}
+\usepackage{pagecolor}
+\usepackage{anyfontsize}
+\usepackage[table, dvipsnames]{xcolor} % KEIN 'html'!
+\usepackage{transparent}
 
 
 
@@ -17,7 +22,8 @@
 \definecolor{my_orange}{HTML}{FF8E00}
 \definecolor{blender_blue}{HTML}{236192}
 \definecolor{remember_gold}{HTML}{FFDE7E}
-
+\definecolor{orangeTop}{HTML}{FFA600}
+\definecolor{orangeBottom}{HTML}{FF8E00}
 
 
 
