--- a/_make_pdf.qmd
+++ b/_make_pdf.qmd
@@ -74,12 +74,100 @@ editor: source
 
 
 
+::: {=latex}
+\clearpage
+\thispagestyle{empty}
+
+\chapter*{Creating the World:\protect\\Grafik, Design \& Animation}\
+
+\vspace{1em}
+
+\textbf{Version:} 2025\
+\textbf{Erstversion:} 2021\
+
+\textbf{Autoren:}\
+Michael Rihs\textsuperscript{1*}\
+Flurina L. Brodwolf\textsuperscript{1}\
+Romina Schmid\textsuperscript{1}\
+Fred W. Mast\textsuperscript{1}\
+\textsuperscript{1}Abteilung für kognitive Psychologie, Institut für Psychologie, Universität Bern
+
+\vspace{1em}
+\section*{Kontakt}
+
+\begin{tabular}{@{}l}
+\textbf{*Dr. Michael Rihs}\\
+Institut für Psychologie \\
+Fabrikstrasse 8 \\
+3012 Bern \\
+{michael.rihs@unibe.ch} \\
+\end{tabular}
+
+
+\vspace{1em}
+\section*{Erstellung der Website}
+
+Die Unterlagen zu diesem Buch sind auf der dazugehörigen Website ([https://mrihs.github.io/Mrihs.Creating-the-World.github.io/](https://mrihs.github.io/Mrihs.Creating-the-World.github.io/)) zu finden. Die Website wurde mit Hilfe von \href{https://posit.co/download/rstudio-desktop/}{RStudio/Posit} und \href{https://quarto.org}{Quarto} entwickelt. Die Website, sowie die Unterrichts-Unterlagen sind im zur Website gehörigen GitHub Repository ([https://github.com/Mrihs/Mrihs.Creating-the-World.github.io](https://github.com/Mrihs/Mrihs.Creating-the-World.github.io)) hinterlegt
+
+\vspace{1em}
+\section*{Lizenz}
+
+Dieses Buch und die dazugehörige Website stellt eine offene Bildungsressource (Open Educational Resource) dar. Sie darf frei verwendet, bearbeitet und weitergegeben werden, sofern die Urheber namentlich genannt und die Inhalte unter der Lizenz \href{https://creativecommons.org/licenses/by-sa/4.0/deed.de}{CC BY-SA 4.0} weitergegeben werden.
+
+Abbildungen der Benutzeroberfläche von \href{https://www.blender.org}{Blender} wurden als Screenshots erstellt und unterliegen der Lizenzbedingungen von Blender.
+
+\vspace{1em}
+\section*{Danksagung}
+
+Besonderer Dank geht an Rahel Steuri und Rebekka Borer, welche bei der Adaption des Kurses im Jahre 2022 beteiligt waren. Weiterer Dank geht an Aurégane Dévaud, welche die Erstellung der Website zum Buch unterstützt hat.
+:::
+
+
+
+
 
 ::: {=latex}
 \clearpage
 \tableofcontents
 \clearpage
 :::
+
+
+
+
+
+::: {=latex}
+\chapter*{Vorwort}\
+
+\markboth{Vorwort}{}
+
+Dieses Buch wurde für die Lehrveranstaltung "Creating the World: Grafik, Design & Animation (inkl. Einführung in die 3D Modellierung mit Blender) entwickelt. Der Kurs wurde erstmals im Jahr 2021 als Methodenkurs für Masterstudierende der philosophisch-humanwissenschaftlichen Fakultät der Universität angeboten. Die Lehrveranstaltung wurde durch das Förderprogramm "Der Mensch in der digitalen Transformation" von der philosophisch-humanwissenschaftlichen Fakultät gefördert. In der Veranstaltung wurde der Prozess der Erstellung virtueller 3D-Objekte, -Welten und Animationen vor dem Hintergrund aktueller Forschung erläutert und durch praktische Beispiele veranschaulicht. Die Studierenden erlernten die Inhalte praxisnah mithilfe der frei zugänglichen Software Blender und erhielten dabei fundierte Einblicke in die grundlegenden Merkmale von 3D-Objekten, -Welten und Animationen.
+
+\section*{Hinweise zur Verwendung von Boxen}
+Im Verlaufe des Buches werden verschiedene Boxen verwendet, um wichtige Informationen hervorzuheben. Die Boxen haben folgende Bedeutung
+
+\begin{tipp}{Tipps}
+Diese Box kennzeichnet nützliche Tipps.
+\vspace{2\baselineskip}
+\end{tipp}
+
+\begin{remember}{Merke...}
+Diese Box kennzeichnet besonders wichtige Inhalte, die nicht vergessen werden sollten.
+\vspace{2\baselineskip}
+\end{remember}
+
+\begin{exercise}{Übungen}
+Diese Box kennzeichnet praktische Übungen.
+\vspace{2\baselineskip}
+\vspace{2\baselineskip}
+\end{exercise}
+
+
+\section*{Rückmeldung}
+Haben Sie Rückmeldungen, Anregungen oder Fehler entdeckt? Diese können gerne an Dr. Michael Rihs (michael.rihs@unibe.ch) zurückgemeldet werden.
+:::
+
+
 
 
 
@@ -346,23 +434,23 @@ process_qmd <- function(file, fpath_in = "", fpath_out = "") {
 #| eval: true
 #| message: false
 # List all data in the Chapter-Folder which start with "Chapter_" and have a ".qmd" suffix
- files <- list.files("Chapters/", pattern = "^Chapter_.*\\.qmd$", full.names = TRUE)
- 
-# # Extract the number of chapters from the filenames as integers
- numbers <- as.integer(stringr::str_extract(basename(files), "(?<=Chapter_)[0-9]+"))
- 
-# # Sort the chapter-files based on the extracted numbers
- files <- files[order(numbers)]
- 
+files <- list.files("Chapters/", pattern = "^Chapter_.*\\.qmd$", full.names = TRUE)
+  
+# Extract the number of chapters from the filenames as integers
+numbers <- as.integer(stringr::str_extract(basename(files), "(?<=Chapter_)[0-9]+"))
+  
+# Sort the chapter-files based on the extracted numbers
+files <- files[order(numbers)]
+  
 # For all chapter-files
 for (fileindex in 1:length(files)){
-#   # Get the current chapter-file
-   current_file <- files[fileindex]
-#
-   # Process the current chapter
-   C1 <- process_qmd(current_file)
-#
-   # Print the current chapter
-   cat(unlist(C1), sep = '\n')
- }
+  # Get the current chapter-file
+  current_file <- files[fileindex]
+  
+  # Process the current chapter
+  C1 <- process_qmd(current_file)
+  
+  # Print the current chapter
+  cat(unlist(C1), sep = '\n')
+}
 ```
