--- a/assets/styles/styles.tex
+++ b/assets/styles/styles.tex
@@ -35,7 +35,7 @@
 
 %%% --- Adjust Document Settings ---
 % Set page size
-\geometry{a4paper, left=30mm, top=25mm, bottom=25mm, right=30mm}
+\geometry{a4paper, inner=30mm, outer=40mm, top=25mm, bottom=25mm}
 
 % Activate fancy-Style
 \pagestyle{fancy}
@@ -92,7 +92,7 @@
 \let\oldmarginnote\marginnote
 
 % Define width off the marings
-\setlength{\marginparwidth}{2cm}
+\setlength{\marginparwidth}{3cm}
 
 
 \renewcommand{\marginnote}[1]{%
